# web

./: .cursorrules  .gitattributes  .gitignore  AGENTS.md  AI_CONTEXT.md  ARCHITECTURE_MAP.md  ARCHITEKTURA_APLIKACJI.md  CHANGELOG.md  CODE_QUALITY.md  DEPLOY_WEB.md  DESKTOP_WRAPPER_DECISION.md  DINBoard-schema.html  DOKUMENTACJA_CHANGELOG.md  DOKUMENTY_MAPA.md  DOMAIN_RULES.md  MIGRATION_PLAN.md  PLAN-ULEPSZEN.md  PREVENTING_CODE_MESS.md  QA_FUNCTIONAL_REPORT_2026-05-09.md  README.md  RELEASE_NOTE_WEB_V1_2026-05-19.md  RELEASE_WEB_V1_CHECKLIST.md  TODO_DOKUMENTACJI.md  TULEJKI_LOGIKA.md  capacitor.config.ts  diff.txt  diff2.txt  eslint.config.js  fix_all.cjs  fix_builtin.cjs  fix_svg.cjs  git_log_logoBox.txt  index.html  index.rar  missing-keys-de.json  missing-keys.json  missing-translations-report.json  netlify.toml  package-lock.json  package.json  (+12 more)
.harness/: README.md  agent.md
_backup_schematic_2026-06-04/: appHelpers.ts  schematicLayoutEngine.ts  schematicRenderer.ts
android/: capacitor.settings.gradle  gradle.properties  variables.gradle
docs/: MOBILE_RESPONSIVENESS_ANALYSIS.md  START-HERE.md  TULEJKI_LOGIKA.md  a11y-audit.md  code-review-and-improvement-plan.md  distribution-roadmap.md  drawing-ux-roadmap.md  google-play-publishing-plan.md  roadmap.md  seo-plan.md
docs-distribution/: generate-color-preview.py
e2e/: core-flow.spec.ts  landing-links.spec.ts  smoke-routes.spec.ts
public/: _headers  ads.txt  manifest.webmanifest  robots.txt  sitemap.xml
scripts/: fix-pdf-keys.mjs  (+30 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+645 files in other folders)
