[package]
name = "dinboard-tauri"
version = "0.1.0"
description = "DINBoard migration shell built with Tauri and React"
authors = ["blamp"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dinboard_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# WHY: config-json5 enables // WHY: comments inside tauri.conf.json (Tauri
# defaults to strict JSON). The project keeps WHY-decisions co-located with
# the values they explain; strict JSON forces us to either drop comments or
# move them to a sibling file, which is harder to keep in sync. See
# https://v2.tauri.app/develop/configuration-files/#supported-formats
tauri-build = { version = "2", features = ["config-json5"] }

[dependencies]
# WHY: same flag as tauri-build above — both parsers must agree on the
# accepted format. See the build-dependencies comment.
tauri = { version = "2", features = ["config-json5"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

